# MuGRiM

./: Cargo.toml  README.md  bundler.toml
src/: lib.rs
ui/: index.html  script.js  style.css
